# nftables-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
backend/: API_README.md  Dockerfile  pyproject.toml  run_api.py
backend/examples/: sample_rules.txt
backend/src/nftables_analyzer/: __init__.py  cli.py
backend/src/nftables_analyzer/api/: __init__.py  main.py  schemas.py
backend/src/nftables_analyzer/api/routes/: __init__.py  health.py  rules.py
backend/src/nftables_analyzer/api/services/: __init__.py  graph_service.py
backend/src/nftables_analyzer/evaluator/: __init__.py  ip_matcher.py  rule_evaluator.py
backend/src/nftables_analyzer/formatter/: __init__.py  rule_formatter.py
backend/src/nftables_analyzer/interpreter/: __init__.py  query_interpreter.py
backend/src/nftables_analyzer/models/: __init__.py  query.py  result.py  rule.py
backend/src/nftables_analyzer/parser/: __init__.py  rule_parser.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_ip_matcher.py  test_parser.py  test_query_interpreter.py  test_rule_evaluator.py  test_rule_parser.py
docs/: multi-agent.md
examples/: ne-yel-ibf-publica.conf
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfigViewer.tsx  QueryForm.tsx  ResultPanel.tsx  RuleGraph.tsx  RuleUploader.tsx
frontend/src/hooks/: useNodeFiltering.ts
(+9 files in other folders)
